--- a/bendihua.yml
+++ b/bendihua.yml
@@ -1,4 +1,4 @@
-name: "fy"
+name: "bendihua"
 organisation: "chfw"
 author: "C.W."
 contact: "wangc_2011@hotmail.com"
@@ -7,10 +7,10 @@ version: "0.0.1"
 current_version: "0.0.1"
 release: "0.0.1"
 copyright_year: 2017
-command_line_interface: "fy"
+command_line_interface: "bdh"
 entry_point: "fanyi.main:main"
 license: MIT
-full_name: 翻译 - अनुवाद  - käännös - Übersetzen - Traduire - перевод - Traduzir - Translate
+full_name: 本地化 - स्थानीयकरण - локализация - Lokalisierung - Localização - localize
 dependencies:
   - googletrans
 description: "googletrans command line interface to translate your i18n file into 106 languages"
